[gd_scene load_steps=5 format=3 uid="uid://674hnm8vwbpn"]

[ext_resource type="Script" uid="uid://cj85lih8q20wk" path="res://components/popups/calendar_popup_ui.gd" id="1_4v806"]
[ext_resource type="Theme" uid="uid://dyhdr7sojcl5h" path="res://assets/windows_xp_theme.tres" id="2_1hpkc"]
[ext_resource type="Texture2D" uid="uid://cgxywei8rjptj" path="res://assets/logos/monocle_man.png" id="3_35l7a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glnmr"]
bg_color = Color(0.281187, 0.281187, 0.281187, 1)

[node name="CalendarPopupUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_glnmr")
script = ExtResource("1_4v806")
default_window_size = Vector2(360, 180)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MonthYearLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Month YEAR"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_1hpkc")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Mon"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Tue"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Wed"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Thu"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Fri"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Sat"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Sun"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 7

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="LifeStylistButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "LifeStylist "
icon = ExtResource("3_35l7a")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="AutopayCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "Autopay Bills"
alignment = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/LifeStylistButton" to="." method="_on_life_stylist_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer2/AutopayCheckBox" to="." method="_on_autopay_check_box_toggled"]
